--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title: Game Developer
-email: your-email@domain.com
+title: Masters of Computer Science, Games Development Student
+email: qin.andrew123@gmail.com
 description: > # keep this and put description below
-  Programmer and Designer
-url: "https://yourdomain.com" # the base hostname & protocol for your site
-linkedin_url: "https://www.linkedin.com/in/gamingportfolio"
-github_username: gamingportfolio
-twitter_username: gamingportfolio
+  Student studying Game Design and Programming at USC
+url: "https://andyq.github.io" # the base hostname & protocol for your site
+linkedin_url: "https://www.linkedin.com/in/andyqin21"
+github_username: qin-andrew123
 footer_text: "This site uses <a href='https://github.com/gamingportfolio/urban-theme-portfolio'>urban-theme (portfolio)</a>."
 
 # Build settings
