--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Masters of Computer Science, Games Development Student
 email: qin.andrew123@gmail.com
 description: > # keep this and put description below
   Student studying Game Design and Programming at USC
-url: "https://andyq.github.io" # the base hostname & protocol for your site
+url: "https://qin-andrew123.github.io" # the base hostname & protocol for your site
 linkedin_url: "https://www.linkedin.com/in/andyqin21"
 github_username: qin-andrew123
 footer_text: "This site uses <a href='https://github.com/gamingportfolio/urban-theme-portfolio'>urban-theme (portfolio)</a>."
